@@ -54,6 +54,7 @@ namespace Orthanc
   static const char* const MIME_PLAIN_TEXT = "text/plain";
   static const char* const MIME_WEB_ASSEMBLY = "application/wasm";
   static const char* const MIME_XML_2 = "text/xml";
+  static const char* const MIME_ZIP = "application/zip";
 
   // This function is autogenerated by the script
   // "Resources/GenerateErrorCodes.py"
@@ -1084,6 +1085,9 @@ namespace Orthanc
       case MimeType_Gif:
         return MIME_GIF;
                 
+      case MimeType_Zip:
+        return MIME_ZIP;
+                
       default:
         throw OrthancException(ErrorCode_ParameterOutOfRange);
     }
@@ -1671,6 +1675,10 @@ namespace Orthanc
     else if (mime == MIME_GIF)
     {
       return MimeType_Gif;
+    }
+    else if (mime == MIME_ZIP)
+    {
+      return MimeType_Zip;
     }
     else
     {
